--- a/kg-wedding/src/assets/tailwind.css
+++ b/kg-wedding/src/assets/tailwind.css
@@ -1,3 +1,81 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.bg-image{
+    background-image: url('kg4.png');
+    background-size: cover;
+    background-position:top center;
+}
+
+.butt{
+    padding: 0.5rem 0rem 0.5rem 0rem;
+    width: 8rem;
+    margin: 0rem 0.5rem 0rem 0.5rem;
+    font-weight: normal;
+    transition: font-weight 0.3s ease;
+}
+
+.butt:hover{
+    font-weight:00;
+}
+
+.card {
+    --tw-border-opacity: 0.1;
+    --tw-text-opacity: 1;
+    padding: 0.5rem 2rem 0.5rem 2rem;
+    justify-content: center;
+    border-radius: 10px;
+    border-style: solid;
+    border-width: 1px;
+    background-color: rgba(28, 28, 28, 0.428);
+    color: rgb(255 255 255 / var(--tw-text-opacity));
+    border-color: rgb(255 255 255 / var(--tw-border-opacity));
+    backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
+    transition: all 400ms;
+  }
+  
+  /* .card {
+    transition: transform 400ms ease;
+    transform: translate(0%, 0%);
+  }
+  
+  .card:hover{
+    transform: translate(1%, 0%);
+  } */
+  
+  .card:hover::before {
+    opacity: 1;
+  }
+  
+  .card::before,
+  .card::after {
+    border-radius: inherit;
+    content: "";
+    height: 100%;
+    left: 0px;
+    opacity: 0;
+    position: absolute;
+    top: 0px;
+    transition: opacity 500ms;
+    width: 100%;
+  }
+  
+  .card::before {
+    background: radial-gradient(
+      1200px circle at var(--mouse-x) var(--mouse-y),
+      rgba(255, 255, 255, 0.06),
+      transparent 60%
+    );
+    z-index: -1;
+  }
+  
+  .card::after {
+    background: radial-gradient(
+      1200px circle at var(--mouse-x) var(--mouse-y),
+      rgba(255, 255, 255, 0.6),
+      transparent 60%
+    );
+    z-index: -3;
+  }
